--- a/templates/home.html
+++ b/templates/home.html
@@ -1,38 +1,10 @@
-<script src="https://cdn.jsdelivr.net/npm/appwrite@2.0.0"></script>
+<script src="https://cdn.jsdelivr.net/npm/appwrite@3.0.5"></script>
 
 <script>
-    let sdk = new Appwrite();
-    sdk.setEndpoint('https://localhost:5858/v1').setProject('60826fd53aa70');
-    // let promise = sdk.account.create('esdasdasasadasdassdasdasddasdasdasdasdasdmail@example.com', 'password');
+    // Init your Web SDK
+    const appwrite = new Appwrite.Appwrite();
 
-    // promise.then(function(response) {
-    //     console.log(response); // Success
-
-    // }, function(error) {
-    //     console.log(error); // Failure
-    // });
-
-    let promise = sdk.account.createSession('esdasdasasadasdassdasdasddasdasdasdasdasdmail@example.com', 'password');
-
-    promise.then(function(response) {
-        console.log(response); // Success
-    }, function(error) {
-        console.log(error); // Failure
-    });
-
-    let promise_2 = sdk.account.get();
-
-    promise_2.then(function(response) {
-        console.log(response); // Success
-    }, function(error) {
-        console.log(error); // Failure
-    });
-
-    let promise_3 = sdk.account.getSessions();
-
-    promise_3.then(function(response) {
-        console.log(response); // Success
-    }, function(error) {
-        console.log(error); // Failure
-    });
+    appwrite
+        .setEndpoint('http://localhost:7878/v1') // Set only when using self-hosted solution
+        .setProject('60bc8f042bcf5');
 </script>
